Create User models, install rspec, shoulda matchers, factory bot and configure them

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     volumes:
       - .:/tertecno
       - app-gems:/app-gems
+    stdin_open: true
+    tty: true
 
 volumes:
   redis:
